# zentinel-agent-waf

./: Cargo.toml  Dockerfile  README.md  ROADMAP.md
.github/workflows/: ci.yml  coverage.yml  release.yml
benches/: waf_benchmark.rs
deploy/: README.md
deploy/helm/sentinel-waf/: Chart.yaml  values.yaml
deploy/helm/sentinel-waf/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
examples/: memory_profile.rs
src/: automata.rs  config.rs  credential.rs  engine.rs  lib.rs  main.rs  metrics.rs  scoring.rs  sensitive.rs  streaming.rs  supplychain.rs  vpatching.rs
src/api/: graphql.rs  json.rs  jwt.rs  mod.rs
src/api/schema/: loader.rs  mod.rs  source.rs  violation.rs
src/api/schema/graphql/: compiled.rs  mod.rs  parser.rs  validator.rs
src/api/schema/openapi/: compiled.rs  mod.rs  parser.rs  validator.rs
src/bot/: mod.rs  signatures.rs  timing.rs
src/federated/: coordinator.rs  gradients.rs  mod.rs  privacy.rs
src/intel/: feeds.rs  mod.rs  reputation.rs
src/ml/: classifier.rs  fingerprint.rs  mod.rs  similarity.rs
src/plugin/: mod.rs
src/rules/: mod.rs  rule.rs
src/rules/injection/: command.rs  ldap.rs  mod.rs  ssti.rs  xpath.rs
src/rules/protocol/: mod.rs  ssrf.rs
src/rules/scanner/: mod.rs
src/rules/sqli/: blind.rs  error_based.rs  mod.rs  nosql.rs  stacked.rs  union_based.rs
src/rules/traversal/: mod.rs
src/rules/xss/: mod.rs
tests/: crs_compatibility.rs  integration.rs  integration_tests.rs  websocket_tests.rs
