[package]
name = "sentinel-agent-waf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-agent-waf"
homepage = "https://sentinel.raskell.io"
documentation = "https://sentinel.raskell.io/docs/agents/waf"
description = "Web Application Firewall agent for Sentinel reverse proxy - SQL injection, XSS, and attack detection"
keywords = ["proxy", "reverse-proxy", "agent", "waf", "security"]
categories = ["network-programming"]
readme = "README.md"

[lib]
name = "sentinel_agent_waf"
path = "src/lib.rs"

[[bin]]
name = "sentinel-waf-agent"
path = "src/main.rs"

[dependencies]
# Sentinel protocol
sentinel-agent-protocol = "0.3"
sentinel-common = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Pattern matching
regex = "1.10"
regex-automata = { version = "0.4", features = ["meta", "dfa", "hybrid", "perf-literal"] }

# Base64 decoding for body chunks
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# ML inference (optional ONNX model support)
tract-onnx = { version = "0.21", optional = true }

# Hashing for fingerprinting
rustc-hash = "2.0"

# Ordered maps for plugin registry
indexmap = "2.2"

# Thread-safe primitives
parking_lot = "0.12"

# Cryptographic hashing
sha2 = "0.10"

# Random number generation (for differential privacy)
rand = "0.8"
rand_distr = "0.4"

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[features]
default = []
ml-onnx = ["tract-onnx"]
federated-network = ["reqwest"]
schema-validation = ["openapiv3", "graphql-parser", "jsonschema", "url", "serde_yaml"]

[dev-dependencies]
tempfile = "3.12"
criterion = { version = "0.5", features = ["html_reports"] }

# Optional: HTTP client for federated learning
[dependencies.reqwest]
version = "0.11"
features = ["json"]
optional = true

# Optional: Schema validation
[dependencies.openapiv3]
version = "2.0"
optional = true

[dependencies.graphql-parser]
version = "0.4"
optional = true

[dependencies.jsonschema]
version = "0.18"
optional = true

[dependencies.url]
version = "2.5"
optional = true

[dependencies.serde_yaml]
version = "0.9"
optional = true

[[bench]]
name = "waf_benchmark"
harness = false
